--- a/Rmarkdown/references.bib
+++ b/Rmarkdown/references.bib
@@ -892,3 +892,56 @@
 	year = {2017},
 	pages = {6761--6769},
 }
+
+
+@article{zhang_impact_2009,
+	title = {Impact of natural organic matter and divalent cations on the stability of aqueous nanoparticles},
+	volume = {43},
+	issn = {00431354},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0043135409003807},
+	doi = {10.1016/j.watres.2009.06.005},
+	language = {en},
+	number = {17},
+	urldate = {2022-09-14},
+	journal = {Water Research},
+	author = {Zhang, Yang and Chen, Yongsheng and Westerhoff, Paul and Crittenden, John},
+	month = sep,
+	year = {2009},
+	pages = {4249--4257},
+}
+
+
+@article{mylon_influence_2004,
+	title = {Influence of {Natural} {Organic} {Matter} and {Ionic} {Composition} on the {Kinetics} and {Structure} of {Hematite} {Colloid} {Aggregation}: {Implications} to {Iron} {Depletion} in {Estuaries}},
+	volume = {20},
+	issn = {0743-7463, 1520-5827},
+	shorttitle = {Influence of {Natural} {Organic} {Matter} and {Ionic} {Composition} on the {Kinetics} and {Structure} of {Hematite} {Colloid} {Aggregation}},
+	url = {https://pubs.acs.org/doi/10.1021/la049153g},
+	doi = {10.1021/la049153g},
+	language = {en},
+	number = {21},
+	urldate = {2022-09-14},
+	journal = {Langmuir},
+	author = {Mylon, Steven E. and Chen, Kai Loon and Elimelech, Menachem},
+	month = oct,
+	year = {2004},
+	pages = {9000--9006},
+}
+
+
+@article{rushing_effects_2003,
+	title = {Some effects of aqueous silica on the corrosion of iron},
+	volume = {37},
+	issn = {00431354},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0043135402001367},
+	doi = {10.1016/S0043-1354(02)00136-7},
+	language = {en},
+	number = {5},
+	urldate = {2022-09-14},
+	journal = {Water Research},
+	author = {Rushing, Jason C and McNeill, Laurie S and Edwards, Marc},
+	month = mar,
+	year = {2003},
+	pages = {1080--1090},
+}
+
