--- a/Rmarkdown/paper.Rmd
+++ b/Rmarkdown/paper.Rmd
@@ -191,7 +191,7 @@ Coupons were left to stagnate for 24 hours. Afterward, each suspension was mixed
 Iron suspensions were fractionated using a modified version of the method described in a recent paper [@trueman_characterizing_2019]. We used an asymmetric flow FFF system (Postnova AF2000 Multiflow) with a 300 Da poly(ethersulfone) membrane and an autosampler with a 1 mL polyether ether ketone sample loop. The system was coupled sequentially to a UV absorbance detector (Shimadzu SPD-20A), a multiangle light scattering detector (Postnova PN3621), and an ICP-MS (ThermoFisher iCAP-RQ). The mobile phase for all separations was 50 mM tris (hydroxymethyl)aminomethane, adjusted to pH 7.3 with trace metal grade HCl. FFF channel effluent was mixed with internal standards (Sc, In, and Tb) in 2% HNO~3~ using a
 mixing tee.
 
-Method parameters are summarized in Table \@ref(tab:table-run-params). The crossflow was maintained at 2.0 mL min^-1^ for the first 31 minutes of each run (including the focus and transition periods); afterward, it was set to decay linearly over 2 minutes to 0.1 mL min^-1^. The crossflow was then maintained at 0.1 mL min^-1^ for 10 minutes; then it was set to zero for the rinse step (the final 10 minutes of the run).
+Method parameters are summarized in Table \@ref(tab:table-run-params). The crossflow was maintained at 2.0 mL min^-1^ for the first 31 minutes of each run (including the focus and transition periods); afterward, it was set to decay linearly over 2 minutes to 0.1 mL min^-1^. The crossflow was then maintained at 0.1 mL min^-1^ for 10 minutes; afterward it was set to zero for the rinse step (the final 10 minutes of the run).
 
 ```{r table-run-params}
 tibble::tribble(
@@ -396,9 +396,9 @@ peak_pos_p <- combined %>%
 
 ```
 
-Sodium silicate and hexametaphosphate suspensions yielded similar iron fractograms (Figure \@ref(fig:figure-fff)), with primary and secondary light scattering peaks. These peaks had maxima, based on ^57^Fe intensity, at `r pks_txt$min_1`--`r pks_txt$max_1` and `r pks_txt$min_2`--`r pks_txt$max_2` minutes. Iron was also present in a broad peak, eluting between approximately 15 and 30 minutes, that did not coincide with a significant light scattering signal but did adsorb UV light at 254 nm. This peak may represent iron nanoparticles that are too small to be quantified using the online MALS detector [@cuss_af4_icpms_2017]. In sodium hexametaphosphate suspensions, the principal ^31^P peak eluted at approximately `r unique(round(peak_pos_p$time))` minutes, which aligns with the peak retention of sodium hexametaphosphate in pure water (Figure S3).
+Sodium silicate and hexametaphosphate suspensions yielded similar iron fractograms (Figure \@ref(fig:figure-fff)), with primary and secondary light scattering peaks. These peaks had maxima, based on ^57^Fe intensity, at `r pks_txt$min_1`--`r pks_txt$max_1` and `r pks_txt$min_2`--`r pks_txt$max_2` minutes. Iron was also present in a broad peak, eluting between 15 and 30 minutes, that did not coincide with a significant light scattering signal but did adsorb UV light at 254 nm. This peak may represent iron nanoparticles that are too small to be quantified using the online MALS detector [@cuss_af4_icpms_2017]. In sodium hexametaphosphate suspensions, the principal ^31^P peak eluted at approximately `r unique(round(peak_pos_p$time))` minutes, which matches the peak retention of sodium hexametaphosphate in pure water (Figure S3).
 
-The control suspension---prepared without either sodium silicate or hexametaphosphate---did not contain iron colloids that were detectable by FFF-ICP-MS (Figure \@ref(fig:figure-fff)). This is consistent with previous research showing that, in the absence of a stabilizing agent---polyphosphate, sodium silicate, natural organic matter, etc...---iron oxide nanoparticles tend to form aggregates with diameters greater than 450 nm, the upper size limit considered here [@zhang_impact_2009; @mylon_influence_2004; @rushing_effects_2003].
+The control suspension---prepared without sodium silicate or hexametaphosphate---did not contain iron colloids that were detectable by FFF-ICP-MS (Figure \@ref(fig:figure-fff)). This aligns with research showing that, in the absence of a stabilizing agent---a sequestrant, for instance---iron oxide nanoparticles tend to form aggregates with diameters greater than 450 nm, the upper size limit considered here [@zhang_impact_2009; @mylon_influence_2004; @rushing_effects_2003].
 
 ```{r figure-fff, fig.cap="Fractograms representing triplicate sodium silicate and hexametaphosphate suspensions and a control suspension (no sequestrant). Theoretical hydrodynamic radius was calculated at constant crossflow (≤ 31 min. retention time), based on channel geometry and flow parameters [@baalousha_size_2006]. Light scattering and absorbance fractograms are displayed with the raw detector responses on the y-axis.", fig.height=6}
 
@@ -617,7 +617,7 @@ pdat %>%
 
 We integrated the ^31^P and ^57^Fe signals over each fractogram---excluding the focus period---to estimate the concentrations of each analyte. Then, we compared these estimates to the concentrations determined by direct ICP-MS quantification (i.e., no FFF). Recovery of ^57^Fe was `r recovery_text$percent_recovery_100Si_57Fe` and `r recovery_text$percent_recovery_3PP_57Fe`% in the sodium silicate and hexametaphosphate suspensions (Table \@ref(tab:table-recov)). 
 
-While FFF recovered essentially all of the iron in sodium silicate suspensions, complexation by hexametaphosphate may have resulted in losses of iron to waste in separations of hexametaphosphate suspensions. And since recovery of P from a sodium hexametaphosphate standard was 111%, the partial P recovery from the iron oxide suspension suggests that hexametaphosphate hydrolyzed to orthophosphate or depolymerized to trimetaphosphate [@bell_hydrolysis_1947], species that readily pass through the FFF membrane to waste (Figure S1). The partial recovery of iron may be due to chelation by trimetaphosphate [@rasmussen_phosphate_1986], which would also escape retention by the membrane. In drinking water systems, hexametaphosphate reversion is expected to be significant, especially in older pipe networks [@holm_metaphosphate_2003]. 
+While FFF recovered essentially all of the iron in sodium silicate suspensions, complexation by polyphosphate species may have resulted in losses of iron to waste in separations of hexametaphosphate suspensions. And since recovery of ^31^P from a sodium hexametaphosphate standard was 111%, the partial ^31^P recovery from the iron oxide suspension suggests that hexametaphosphate hydrolyzed to orthophosphate or depolymerized to trimetaphosphate [@bell_hydrolysis_1947], species that readily pass through the FFF membrane to waste (Figure S1). The partial recovery of iron may be due to chelation by trimetaphosphate in particular [@rasmussen_phosphate_1986]: the resulting complex would also escape retention by the FFF membrane. In drinking water systems, hexametaphosphate reversion is expected to be significant, especially in older pipe networks [@holm_metaphosphate_2003]. 
 
 ```{r table-recov}
 
@@ -660,11 +660,11 @@ fig_pb_in %>%
 ```
 
 
-Lead partitioned readily to suspended iron oxide colloids when added to the sodium silicate and hexametaphosphate suspensions (Figure \@ref(fig:figure-pb)), with variation in ^57^Fe explaining r^2^ = 99 and 93% of variation in ^208^Pb, respectively. The strong apparent relationship between iron and lead is consistent with much previous research documenting lead adsorption to iron (oxyhydr)oxides [@mckenzie_adsorption_1980; @ainsworth_cobalt_1994] and, more specifically, elevated lead in iron-rich drinking water [@li_impact_2020; @trueman_galvanic_2017; @trueman_understanding_2016; @masters_increased_2015; @mcfadden_contributions_2011; @deshommes_source_2010]. Given that iron colloids with diameters smaller than 450 nm were not detectable in the control suspension, it was excluded from the partitioning experiment. The larger aggregates it contained, though, would also be expected to adsorb lead [@mckenzie_adsorption_1980].
+Lead partitioned readily to suspended iron oxide colloids when added to the sodium silicate and hexametaphosphate suspensions (Figure \@ref(fig:figure-pb)), with variation in ^57^Fe explaining r^2^ = 99 and 93% of variation in ^208^Pb, respectively. The strong apparent relationship between iron and lead is consistent with research documenting lead adsorption to iron (oxyhydr)oxides [@mckenzie_adsorption_1980; @ainsworth_cobalt_1994] and, more specifically, elevated lead in iron-rich drinking water [@li_impact_2020; @trueman_galvanic_2017; @trueman_understanding_2016; @masters_increased_2015; @mcfadden_contributions_2011; @deshommes_source_2010]. Given that iron colloids with diameters smaller than 450 nm were not detectable in the control suspension, it was excluded from the partitioning experiment. The larger aggregates it contained, though, would also be expected to adsorb lead [@mckenzie_adsorption_1980].
 
 There was little evidence here of lead complexation by free hexametaphosphate: the primary ^31^P signal at a retention time of approximately 14 minutes did not co-occur with ^208^Pb. The preferential interaction of lead with iron over hexametaphosphate suggests that the colloids that result from iron corrosion in the presence of a sequestrant may be a particularly effective transport vector for lead. Preferential partitioning of lead to iron (oxyhydr)oxide colloids was reported in a recent paper, where a much larger fraction of total lead was associated with colloidal iron than colloidal dissolved organic matter (although both appeared to bind lead) [@trueman_characterizing_2019]. In another study, a greater fraction of dissolved lead adsorbed to iron oxide particles than precipitated with orthophosphate [@shi_lead_2020]. 
 
-```{r figure-pb, fig.cap="Fractograms representing duplicate sodium silicate and hexametaphosphate suspensions; each is paired with an equivalent suspension dosed with 200 µg Pb L^-1^. Light scattering and absorbance fractograms are displayed with the raw detector responses on the y-axis.", fig.height=4}
+```{r figure-pb, fig.cap="Fractograms representing sodium silicate and hexametaphosphate suspensions; each is paired with an equivalent suspension dosed with 200 µg Pb L^-1^. Light scattering and absorbance fractograms are displayed with the raw detector responses on the y-axis.", fig.height=4}
 
 fig_pb_in %>% 
   left_join(sample_names, by = "sample") %>% 
@@ -684,11 +684,19 @@ fig_pb_in %>%
 
 The interaction among corroding iron, sequestrant additives, and lead has important implications for drinking water quality. When polyphosphate or sodium silicate is used to minimize the aesthetic effects of iron corrosion, the iron colloids that result may increase lead mobility. That is, complexation of lead by polyphosphate [@holm_characterizing_1990; @holm_potential_1991; @edwards_effect_2002] is not the only risk that sequestrant use poses: depending on the relative affinity of lead for the dispersed colloids versus the free sequestrant---and the relative concentrations of the two adsorbents---the dispersion of iron may have a greater effect on lead levels. 
 
-Moreover, even sequestrants that do not form strong complexes with lead (e.g., sodium silicates) may increase lead release. In a recent model distribution system study [@li_impact_2020], for instance, an abrupt increase in the dose of sodium silicate was followed by elevated iron release from corroded cast iron pipe sections and lead release from lead pipes downstream. In the long term, silicate treatment may decrease iron release even if it initially does the opposite [@rushing_effects_2003], but anticipating and preparing for the short-term implications highlighted here will help protect water quality. Testing that does not account for interactions between lead and iron, then, may underestimate the true risk of elevated lead associated with sequestration.
+Moreover, even sequestrants that do not form strong complexes with lead may increase lead release. In a recent model distribution system study [@li_impact_2020], for instance, an abrupt increase in the dose of sodium silicate was followed by elevated iron release from corroded cast iron pipe sections and lead release from lead pipes downstream. In the long term, silicate treatment may decrease iron release even if it initially does the opposite [@rushing_effects_2003], but anticipating the short-term effects highlighted here will help protect water quality. Testing that does not account for interactions between lead and iron, then, may underestimate the true risk of elevated lead associated with sequestration.
 
 # Conclusion  
 
 Sodium silicate and sodium hexametaphosphate solutions yielded nanoparticulate suspensions of iron (oxyhydr)oxide when exposed to a corroding iron surface. The size distributions of the two suspensions were similar, and particle size estimates obtained from light scattering data agreed reasonably well with those determined by TEM image analysis. Lead appeared to bind to iron nanoparticles, and in the sodium hexametaphosphate suspension it interacted preferentially with iron over free hexametaphosphate. Our findings highlight a risk associated with sequestrant use in drinking water treatment: sequestrants---even those that do not form complexes with lead---may generate colloids that provide an important mobile sink for lead, potentially increasing human exposure.
+
+# Author contributions  
+
+Benjamin Trueman: investigation, data curation, formal analysis, visualization, writing--original draft; Javier Locsin: investigation, methodology, writing--review & editing; Evelyne Dor&eacute;: investigation, methodology, writing--review & editing; Kalli Hood: investigation, methodology, writing--review & editing; Graham Gagnon: funding acquisition, writing--review & editing.
+
+# Conflicts of interest  
+
+There are no conflicts to declare.  
 
 # Acknowledgments 
 
